--- a/package.json
+++ b/package.json
@@ -24,15 +24,20 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@tsconfig/svelte": "^5.0.2",
     "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "esbuild-svelte": "^0.8.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "nodemon": "^3.0.1",
     "obsidian": "latest",
     "rollup": "^4.12.0",
+    "rollup-plugin-svelte": "^7.1.6",
     "rollup-plugin-svg": "^2.0.0",
+    "svelte": "^4.2.11",
+    "svelte-preprocess": "^5.1.3",
     "typescript": "^5.3.3"
   }
 }
